[FIX] mail: flicker when expanding direct messages in sidebar
Before this commit:

The title "Direct Messages" in the sidebar used to flicker (move up and down)
when expanding or folding the section.

After this commit:

The flickering issue is fixed, so now the title "Direct Messages" remains
in place when the section is expanded or collapsed.

task:4100682

closes odoo/odoo#176114

--- a/addons/mail/static/src/discuss/core/web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/web/discuss_sidebar_categories.scss
@@ -5,6 +5,10 @@
     }
 }
 
+.o-mail-DiscussSidebarCategory-item {
+    line-height: 2.45; // so that same height as actions, so folding doesn't resize
+}
+
 .o-mail-DiscussSidebar-item {
     &:hover .o-mail-DiscussSidebarChannel-commands {
         display: flex !important;
